--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     flex-direction: column;
     background: linear-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
     font-family: system-ui;
-    overflow: hidden;
+
 }
 
 .score-con {
@@ -207,6 +207,7 @@ body {
     background: #feee;
     padding: 10px 22px;
     border-radius: 10px;
+    transform:translateX(50%);
     transform: translateY(-200%);
     transition: all 0.4s ease;
 }
